Put the correct text

--- a/index.html
+++ b/index.html
@@ -24,38 +24,38 @@
             </div>
             <div class="position" id="pos-2">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Русский</h4>
+                    <p>2 063 000+ статей</p>
                 </a>
             </div>
             <div class="position" id="pos-3">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Français</h4>
+                    <p>2 709 000+ articles</p>
                 </a>
             </div>
             <div class="position" id="pos-3">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>中文</h4>
+                    <p>1,500,000+ 条目 / 條目</p>
                 </a>
             </div>
             <div class="position" id="pos-4">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Polski</h4>
+                    <p>1 668 000+ haseł</p>
                 </a>
             </div>
             <div class="position" id="pos-5">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>日本語</h4>
+                    <p>1,472,000+ 記事</p>
                 </a>
             </div>
             <div class="position" id="pos-6">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Deutsch</h4>
+                    <p>3.051.000+ Artikel</p>
                 </a>
             </div>
             <div class="position" id="pos-7">
@@ -66,20 +66,20 @@
             </div>
             <div class="position" id="pos-8">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Español</h4>
+                    <p>2.061.000+ artículos</p>
                 </a>
             </div>
             <div class="position" id="pos-9">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Italiano</h4>
+                    <p>1.935.000+ voci</p>
                 </a>
             </div>
             <div class="position" id="pos-10">
                 <a href="#">
-                    <h4>English</h4>
-                    <p>7,056,000+ articles</p>
+                    <h4>Português</h4>
+                    <p>1.155.000+ artigos</p>
                 </a>
             </div>
     </div>
